<resources>

    <string name="app_name">httpFrame</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="push_refresh">上拉准备刷新</string>
    <string name="pull_refresh">下拉准备刷新</string>
    <string name="release_refresh">释放立即刷新</string>
    <string name="popwindow">popwindow</string>
    <string name="txt1">寿司拼盘</string>
    <string name="txt2">Y38/份</string>
    <string name="txt3">20人吃过</string>
    <string name="txt4">本店No.2</string>
    <string name="hunhe">混合</string>
    <string name="feiji">飞机</string>
    <string name="huoche">火车</string>

</resources>